<resources>
    <string name="app_name">Travces</string>

    <string name="todo">todo</string>
    <string name="title_please_wait">Please wait…</string>
    <string name="warn_press_back_to_exit">Press BACK to exit!</string>
    <string name="btn_login_title">Login</string>
    <string name="btn_sign_up_title">Sign Up</string>
    <string name="btn_title_update">Update</string>
    <string name="btn_title_submit">Submit</string>
    <string name="btn_title_forgot_your_password">Forgot your password?</string>
    <string name="my_profile">My Profile</string>
    <string name="label_alert">Alert</string>
    <string name="message_logout">Logged out successfully</string>
    <string name="cancel">Cancel</string>
    <string name="yes">Yes</string>
    <string name="btn_title_gmail">Login with Gmail</string>
    <string name="btn_title_facebook">Join in facebook</string>

    // drawer menu
    <string name="notification">Notification</string>
    <string name="payments">Payments</string>
    <string name="leave_status">Leave Status</string>
    <string name="contact_support_team">Contact Support Team</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>

    //Login Screen
    <string name="login_email">Enter Email</string>
    <string name="login_create_account">
        <u>Create an account</u>
    </string>
    <string name="login_forget">
        <u>Forget?</u>
    </string>
    <string name="login_password">Enter Password</string>
    <string name="login_cell_number">Cell N0.</string>
    <string name="about_us">Create a safe and efficient transport management. We Provide GPS tracking solutions to
        ensure student safety to and from their schools/colleges/universities.We provide real-time locationon the
        vehicle on your phone.
    </string>

    //signup screen
    <string name="signup_first_name">First Name</string>
    <string name="signup_last_name">Last Name</string>
    <string name="signup_phon">Phone No.</string>
    <string name="signup_cnic">CNIC</string>
    <string name="signup_address">Address</string>
    <string name="signup_email">Email</string>
    <string name="signup_password">Password</string>
    <string name="signup_confirm_password">Confirm Password</string>

    //update password screen
    <string name="old_pass">Old Password</string>
    <string name="new_pass">New Password</string>
    <string name="confirm_new_pass">Confirm New Password</string>

    //add children screen
    <string name="guardian_name">Guardian Name</string>
    <string name="Student_Name">Student Name</string>
    <string name="pick_from">Pick Location</string>
    <string name="pick_time">Pick Time</string>
    <string name="drop_to">Drop Location</string>
    <string name="drop_time">Drop Time</string>

    //Setting screen
    <string name="notifications">NOTIFICATIONS</string>
    <string name="notifications_condition">Notification are OFF/ON</string>
    <string name="terms_of_services">TERMS OF SERVICE</string>
    <string name="privacy_policy">PRIVACY POLICY</string>
    <string name="change_pass">Change Your Password</string>


    //EnterCodFragment
    <string name="enter_code">Please Enter Your Code</string>
    <string name="tv_sent_to_code">sent to(322) 7001190</string>
    <string name="ed_4digitcode">4 Digit Code</string>
    <string name="btn_submit">Submit</string>
    <string name="tv_dont_receivecode">Dont Receive a code?</string>
    <string name="btn_resend">Resend</string>

    //joinin screen
    <string name="btn_signup">SignUp</string>
    <string name="btn_signin">SignIn</string>
    <string name="btn_join_withfb">Join With Facebook</string>
    <string name="btn_join_wwith_gmail">Join With Gmail</string>

    //AddPayMethodeFragment
    <string name="tv_credit_or_debit">Credit or Debit card</string>
    <string name="tv_google_pay">Google Pay</string>

    //PaymentFragment
    <string name="tv_paymentmethode">Payment Methods</string>
    <string name="tv_cash">Cash</string>
    <string name="tv_add_payment_card">ADD Payment Card</string>
    <string name="tv_promotions">Promotions</string>
    <string name="ed_addpromo_code">Add Promo Code</string>
    <string name="btn_redeem">REDEEM</string>

    //ProfieFragment
    <string name="tv_add_children">Add Children</string>
    <string name="signup_picklocation">Pickup Location</string>
    <string name="drop_location">Drop Location</string>
    <string name="institute_name">Institute Name</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="pendingvalue">Pending</string>
</resources>
