<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
                android:id="@+id/nav_home"
                android:icon="@drawable/ic_home_black_24dp"
                android:title="Home" />
        <item
                android:id="@+id/nav_profile"
                android:title="My Profile" />
        <item
                android:id="@+id/nav_notification"
                android:icon="@drawable/ic_notifications_black_24dp"
                android:title="@string/notification" />
        <item
                android:id="@+id/nav_payments"
                android:icon="@drawable/ic_payment_black_24dp"
                android:title="@string/payments" />
        <item
                android:id="@+id/nav_leaveStatus"
                android:icon="@drawable/ic_status_black_24dp"
                android:title="@string/leave_status" />
        <item
                android:id="@+id/nav_contactSupportTeam"
                android:icon="@drawable/ic_call_black_24dp"
                android:title="@string/contact_support_team" />
        <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_settings_black_24dp"
                android:title="@string/settings" />
        <item
                android:id="@+id/logout"
                android:icon="@drawable/ic_logout_black_24dp"
                android:title="@string/logout" />
    </group>


</menu>
