<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:layout_gravity="center"
              android:padding="20dp"
              android:background="#fff"
              android:gravity="center"
              android:orientation="vertical"
              tools:context=".view.fragments.login.VerificationFragment">

    <LinearLayout
            android:layout_width="150dp"
            android:layout_height="200dp"
            android:gravity="center"
            android:layout_gravity="center"
            android:orientation="vertical">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/enter_code"
                android:textColor="#000" />

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:hint="@string/tv_sent_to_code" />


    </LinearLayout>
    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

        <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_weight="80"
                android:ems="10"
                android:hint="@string/ed_4digitcode"
                android:inputType="number"
                android:textAlignment="center"
                android:textColorHint="@color/colorPrimary"
                android:textSize="@dimen/text_size_small" />

    </com.google.android.material.textfield.TextInputLayout>
    <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_margin="10dp"
            app:cardCornerRadius="20dp">

        <Button
                android:id="@+id/bSubmit"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/bg_button_style"
                android:text="@string/btn_submit" />
    </androidx.cardview.widget.CardView>

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:weightSum="2"
            android:layout_height="wrap_content">


        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#000"
                android:text="@string/tv_dont_receivecode"/>
        <TextView
                android:id="@+id/tvResend"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:elevation="3dp"
                android:textColor="@color/colorAccent"
                android:background="#fff"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:text="@string/btn_resend"/>
    </LinearLayout>
</LinearLayout>
