<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#fff"
                android:orientation="vertical"
                tools:context=".Fragments.PaymentFragment">


    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:padding="12dp"
                android:text="@string/tv_paymentmethode"
                android:textSize="@dimen/text_size_small" />

        <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="10dp">

            <ImageView
                    android:layout_width="50dp"
                    android:layout_height="40dp"
                    android:src="@drawable/cashicon" />

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:text="@string/tv_cash"
                    android:textSize="@dimen/text_size_small" />

        </LinearLayout>

        <TextView
                android:id="@+id/tv_addpaymentmethod"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="#fff"
                android:clickable="true"
                android:elevation="4dp"
                android:paddingLeft="10dp"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                android:text="@string/tv_add_payment_card"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/text_size_small" />


    </LinearLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:orientation="vertical">


        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:padding="12dp"
                android:text="@string/tv_promotions"
                android:textSize="@dimen/text_size_small" />

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_margin="10dp"
                android:orientation="horizontal">


            <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_height="wrap_content"
                    android:layout_weight="80">

                <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/ed_firstName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:layout_weight="80"
                        android:hint="@string/ed_addpromo_code"
                        android:textColorHint="@color/colorPrimary"
                        android:textSize="@dimen/text_size_small" />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="#fff"
                    android:clickable="true"
                    android:elevation="4dp"
                    android:text="@string/btn_redeem"
                    android:textColor="@color/colorPrimary" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>