<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:app="http://schemas.android.com/apk/res-auto"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:id="@+id/fragment_container"
             android:layout_height="match_parent"
             android:gravity="center"
             android:orientation="vertical"
             android:padding="8dp"
             tools:context=".view.fragments.login.SignUpFragment">
    <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:clickable="true"
            android:elevation="4dp"
            android:focusable="true"
            app:cardCornerRadius="15dp">
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:baselineAligned="false"
                    android:orientation="horizontal"
                    android:padding="15dp"
                    android:weightSum="3">

                <LinearLayout
                        android:layout_width="230dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1.4"
                        android:orientation="vertical">

                    <com.google.android.material.textfield.TextInputLayout
                            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                            android:layout_width="match_parent"
                            android:layout_height="55dp">

                        <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/etFname"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_marginTop="5dp"
                                android:hint="@string/signup_first_name"
                                android:textColorHint="@color/colorPrimary"
                                android:textSize="@dimen/text_size_small"/>

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                            android:layout_width="match_parent"
                            android:layout_height="55dp"
                            android:layout_marginTop="8dp">

                        <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/etPhone"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="5dp"
                                android:hint="@string/signup_phon"
                                android:inputType="phone"
                                android:textColorHint="@color/colorPrimary"
                                android:textSize="@dimen/text_size_small"/>

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                            android:layout_width="match_parent"
                            android:layout_height="55dp"
                            android:layout_marginTop="8dp">

                        <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/etAddress"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="5dp"
                                android:hint="@string/signup_address"
                                android:textColorHint="@color/colorPrimary"
                                android:textSize="@dimen/text_size_small"/>

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                            android:layout_width="match_parent"
                            android:layout_height="55dp"
                            android:layout_marginTop="8dp">

                        <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/etPassword"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="5dp"
                                android:hint="@string/signup_password"
                                android:inputType="textPassword"
                                android:textColorHint="@color/colorPrimary"
                                android:textSize="@dimen/text_size_small"/>

                    </com.google.android.material.textfield.TextInputLayout>


                </LinearLayout>

                <LinearLayout
                        android:layout_width="10dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:layout_weight="0.2">


                </LinearLayout>

                <LinearLayout
                        android:layout_width="220dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1.4"
                        android:orientation="vertical">

                    <com.google.android.material.textfield.TextInputLayout
                            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                            android:layout_width="match_parent"
                            android:layout_height="55dp">

                        <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/etLname"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="5dp"
                                android:hint="@string/signup_last_name"
                                android:textSize="@dimen/text_size_small"/>

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                            android:layout_width="match_parent"
                            android:layout_height="55dp"
                            android:layout_marginTop="8dp">

                        <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/etCnic"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_marginTop="5dp"
                                android:hint="@string/signup_cnic"
                                android:inputType="text"
                                android:textSize="@dimen/text_size_small"/>

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                            android:layout_width="match_parent"
                            android:layout_height="55dp"
                            android:layout_marginTop="8dp">

                        <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/etEmail"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_marginTop="5dp"
                                android:hint="@string/signup_email"
                                android:inputType="textEmailAddress"
                                android:textSize="@dimen/text_size_small"/>

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                            android:layout_width="match_parent"
                            android:layout_height="55dp"
                            android:layout_marginTop="8dp">

                        <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/etCpassword"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_marginTop="5dp"
                                android:hint="@string/signup_confirm_password"
                                android:inputType="textPassword"
                                android:textSize="@dimen/text_size_small"/>

                    </com.google.android.material.textfield.TextInputLayout>
                </LinearLayout>


            </LinearLayout>


            <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    app:cardCornerRadius="20dp">

                <Button
                        android:id="@+id/bSignUp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/bg_button_style"
                        android:text="@string/btn_signup"
                        android:textColor="#fff"/>
            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</FrameLayout>