<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/bg_img_login"
                android:padding="12dp"
                tools:context=".view.fragments.login.LoginFragment">

    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="140dp"
            android:layout_centerHorizontal="true"
            android:contentDescription="@string/todo"
            android:src="@mipmap/logo"/>

    <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:background="@drawable/bg_rounded_border">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="24dp"
                android:orientation="vertical">

            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/ef_white"
                    android:drawableLeft="@drawable/ic_call_black_24dp"
                    android:drawablePadding="10dp"
                    android:hint="@string/signup_phon"
                    android:inputType="textEmailAddress"
                    android:selectAllOnFocus="true"
                    android:textColor="@color/ef_white"
                    android:textColorHint="@color/colorLightWhite"
                    android:textSize="@dimen/text_size_small"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"/>

            <EditText
                    android:id="@+id/login_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/ef_white"
                    android:drawableLeft="@drawable/ic_lock_black_24dp"
                    android:drawablePadding="10dp"
                    android:hint="@string/login_password"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword"
                    android:selectAllOnFocus="true"
                    android:textColorHint="@color/colorLightWhite"
                    android:textSize="@dimen/text_size_small"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"/>


            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/activity_vertical_margin"
                    android:orientation="vertical">

                <!--<CheckBox-->
                <!--android:id="@+id/chkRemember"-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:backgroundTint="#fff"-->
                <!--android:buttonTint="#fff"-->
                <!--android:text="Remember me"-->
                <!--android:textColor="#fff"-->
                <!--android:textSize="@dimen/text_size_small"/>-->
                <TextView
                        android:id="@+id/tvForgotPassword"
                        style="@style/LoginSignUpLabelTextStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/btn_title_forgot_your_password"
                        android:textColor="@android:color/holo_blue_light"/>

                <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_margin="10dp"
                        android:layout_weight="1"
                        app:cardCornerRadius="20dp">

                    <Button
                            android:id="@+id/bLogin"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/bg_button_style"
                            android:text="@string/btn_login_title"/>
                </androidx.cardview.widget.CardView>

                <!--<LinearLayout-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_margin="10dp"-->
                <!--android:weightSum="3">-->


                <!--<de.hdodenhof.circleimageview.CircleImageView-->
                <!--android:id="@+id/login_withfb"-->
                <!--android:layout_width="50dp"-->
                <!--android:layout_height="50dp"-->
                <!--android:layout_weight="1"-->
                <!--android:src="@drawable/ic_facebook"/>-->

                <!--<de.hdodenhof.circleimageview.CircleImageView-->
                <!--android:layout_width="50dp"-->
                <!--android:id="@+id/login_withGmail"-->
                <!--android:layout_height="50dp"-->
                <!--android:layout_weight="1"-->
                <!--android:src="@drawable/ic_gmail"/>-->

                <!--<de.hdodenhof.circleimageview.CircleImageView-->
                <!--android:layout_width="50dp"-->
                <!--android:id="@+id/login_withInsta"-->
                <!--android:layout_height="50dp"-->
                <!--android:layout_weight="1"-->
                <!--android:src="@drawable/instagram_logo"/>-->

                <!--</LinearLayout>-->
            </LinearLayout>

            <!--<LinearLayout-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:orientation="horizontal">-->

            <!--<Button-->
            <!--android:id="@+id/bSingup"-->
            <!--style="@style/Widget.MaterialComponents.Button.OutlinedButton"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:gravity="start"-->
            <!--android:text="@string/login_create_account"-->
            <!--android:textColor="#fff"-->
            <!--android:textSize="@dimen/text_size_small"/>-->

            <!--<Button-->
            <!--style="@style/Widget.MaterialComponents.Button.OutlinedButton"-->
            <!--android:layout_width="193dp"-->
            <!--android:id="@+id/bForgotPassword"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:text="@string/login_forget"-->
            <!--android:textColor="@color/ef_white"-->
            <!--android:layout_gravity="end"-->
            <!--android:textSize="@dimen/text_size_small"/>-->

            <!--</LinearLayout>-->

        </LinearLayout>
    </LinearLayout>
</RelativeLayout>